# ExMatAI

./: .env  .gitignore  .uvignore  README.md  config.yaml  docker-compose.yaml  main.py  ollama-pull.sh  pyproject.toml  requirements.txt  setup.py  setup_environments.sh  test_deepseek_ocr.py  test_ollama_connection.py
agents/: __init__.py  data_aggregation_agent.py  experiment_assembly_agent.py  experiment_classification_agent.py  ocr_agent.py  plots_analysis_agent.py  smiles_generation_agent.py  smiles_mapping_agent.py  structure_extraction_agent.py  text_analysis_agent.py
models/: __init__.py  chemvlm_loader.py  deepseek_ocr_loader.py  moldet_loader.py
tests/: test_agents.py  test_workflow.py
utils/: __init__.py  chemvlm_wrapper.py  config_manager.py  deepseek_ocr_wrapper.py  image_processing.py  state_schema.py  text_processing.py  validation.py
workflow/: __init__.py  langgraph_workflow.py
